--- a/Secretum17/Secretum17.vcxproj
+++ b/Secretum17/Secretum17.vcxproj
@@ -185,7 +185,9 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="aes.h" />
     <ClInclude Include="des.h" />
+    <ClInclude Include="encryption_AL.h" />
     <ClInclude Include="md5.h" />
     <ClInclude Include="MD5_dlg.h" />
     <ClInclude Include="Resource.h" />
@@ -193,10 +195,11 @@
     <ClInclude Include="Secretum17Dlg.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
-    <ClInclude Include="wrapper.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="aes.cpp" />
     <ClCompile Include="des.cpp" />
+    <ClCompile Include="encryption_AL.cpp" />
     <ClCompile Include="md5.cpp" />
     <ClCompile Include="Secretum17.cpp" />
     <ClCompile Include="Secretum17Dlg.cpp" />
@@ -206,7 +209,6 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="wrapper.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="Secretum17.rc" />
