--- a/Secretum17/Secretum17.vcxproj.filters
+++ b/Secretum17/Secretum17.vcxproj.filters
@@ -45,14 +45,17 @@
     <ClInclude Include="des.h">
       <Filter>암호화알고리즘\헤더 파일</Filter>
     </ClInclude>
-    <ClInclude Include="wrapper.h">
-      <Filter>암호화알고리즘\헤더 파일</Filter>
-    </ClInclude>
     <ClInclude Include="md5.h">
       <Filter>암호화알고리즘\헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="MD5_dlg.h">
       <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="encryption_AL.h">
+      <Filter>암호화알고리즘\헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="aes.h">
+      <Filter>암호화알고리즘\헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -68,10 +71,13 @@
     <ClCompile Include="des.cpp">
       <Filter>암호화알고리즘\소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="wrapper.cpp">
+    <ClCompile Include="md5.cpp">
       <Filter>암호화알고리즘\소스 파일</Filter>
     </ClCompile>
-    <ClCompile Include="md5.cpp">
+    <ClCompile Include="aes.cpp">
+      <Filter>암호화알고리즘\소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="encryption_AL.cpp">
       <Filter>암호화알고리즘\소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
